# btor2select_aaai

./: .gitignore  LICENSE  README.md  analyze.py  create_feature.py  ehm.py  pairwise_model.py  parse_raw_tsv.py  pw_bokw_contribution_dataset.json  reproduce.ipynb  requirement.txt
benchmarks/bv/: all-tasks.set  bv64-false-tasks.set  bv64-tasks.set  bv64-true-tasks.set  demo-tasks.set  multi-bad.set  no-next-tasks.set
btor2feature/: .gitignore  CMakeLists.txt
btor2feature/src/: CMakeLists.txt  counts.c
bv_data/: test.tsv
performance_data/: performance.table.csv  train.tsv
saved_models/ehm_bokw/: xg_0.json  xg_1.json  xg_2.json  xg_3.json  xg_4.json  xg_5.json  xg_6.json  xg_7.json  xg_8.json  xg_9.json
saved_models/ehm_bokw_pca/: pca_9.joblib  scaler_9.joblib  xg_0.json  xg_1.json  xg_2.json  xg_3.json  xg_4.json  xg_5.json  xg_6.json  xg_7.json  xg_8.json  xg_9.json
saved_models/ehm_bwa/: xg_0.json  xg_1.json  xg_2.json  xg_3.json  xg_4.json  xg_5.json  xg_6.json  xg_7.json  xg_8.json  xg_9.json
saved_models/ehm_bwa_pca/: pca_4.joblib  scaler_0.joblib  xg_0.json  xg_1.json  xg_2.json  xg_3.json  xg_4.json  xg_5.json  xg_6.json  xg_7.json  xg_8.json  xg_9.json
saved_models/pw_bokw/: xg_0_1.joblib  xg_0_2.joblib  xg_0_3.joblib  xg_0_4.joblib  xg_0_5.joblib  xg_0_6.joblib  xg_0_7.joblib  xg_0_8.joblib  xg_0_9.joblib  xg_1_2.joblib  xg_1_3.joblib  xg_1_4.joblib  xg_1_5.joblib  xg_1_6.joblib  xg_1_7.joblib  xg_1_8.joblib  xg_1_9.joblib  xg_2_3.joblib  xg_2_4.joblib  xg_2_5.joblib  xg_2_6.joblib  xg_2_7.joblib  xg_2_8.joblib  xg_2_9.joblib  xg_3_4.joblib  (+20 more)
(+3659 files in other folders)
